fixing spacing for iphone compatibility

--- a/src/App.css
+++ b/src/App.css
@@ -524,6 +524,7 @@ transform: scale(1.2);
 
     #projectsContainer{
       padding-bottom:0; 
+      -webkit-padding-bottom:0;
       height:300vh;
       -webkit-height:300vh;
       justify-content: center;
